adding applying rules
